extract github config from code to properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 server.port=8887
+
+github.client.id=Iv1.866af577eec2e971
+github.client.secret=22782b8a23cca4859ed5298b5b48b97f4868ed64
+github.redirect.uri=http://localhost:8887/callback
