--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 server.port=8887
-
 github.client.id=Iv1.866af577eec2e971
 github.client.secret=22782b8a23cca4859ed5298b5b48b97f4868ed64
 github.redirect.uri=http://localhost:8887/callback
@@ -7,3 +6,4 @@ spring.datasource.url=jdbc:h2:~/community2
 spring.datasource.username=sa
 spring.datasource.password=123456
 spring.datasource.driver-class-name=org.h2.Driver
+mybatis.configuration.map-underscore-to-camel-case=true
